force-app/main/default/objects/Product2/fields/Base_Standalone_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Standalone_Price__c</fullName>
    <label>Base Standalone Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>