force-app/main/default/objects/Product2/fields/Bundle_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Discount_Rate__c</fullName>
    <label>Bundle Discount Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>