force-app/main/default/objects/Product2/fields/Platform_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Platform_Dependency__c</fullName>
    <label>Platform Dependency</label>
    <referenceTo>Platform_Service__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>