force-app/main/default/objects/Product2/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetName>Service_Category</valueSetName>
    </valueSet>
</CustomField>